--- a/style.css
+++ b/style.css
@@ -23,19 +23,13 @@
     
 }
 
-.topScreen, .downScreen {
+.downScreen {
     display: flex;
     justify-content: end;
     align-items: center;
     padding: 5px;
-}
+    overflow: hidden;
 
-.topScreen {
-    flex: 2;
-    font-size: 30px;
-}
-
-.downScreen {
     flex: 3;
     font-size: 40px;
 }
@@ -62,7 +56,6 @@
     color: white;
 }
 
-/*Keyboard*/
 .keyboard {
     display: grid;
 
@@ -100,4 +93,28 @@
 .clearBtn:hover, .keyBtn:hover, .backBtn:hover {
     box-shadow: 0 0 5px 5px white;
     transition: all 0.2s ease-in-out;
+}
+
+
+i {
+    color: white;
+}
+
+#div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+    background-color: grey;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    height: 5rem;
+    font-size: 20px;
 }
